--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,10 +1,12 @@
+- name: is dofiles installed?
+  stat:
+    path: /home/irakli/.cfg
+  register: dotfiles_exists
 - name: clone bare dotfiles
-  shell: git clone --bare git@github.com:chkhetiani/.dotfiles.git $HOME/.cfg
-- name: set alias
-  shell: alias config=''
-- name: checkout content
-  shell: /usr/bin/git --git-dir=$HOME/.cfg/ --work-tree=$HOME checkout
-- name: hide untrack configs
-  shell: /usr/bin/git --git-dir=$HOME/.cfg/ --work-tree=$HOME config --local status.showUntrackedFiles no
+  shell: |
+    git clone --bare git@github.com:chkhetiani/.dotfiles.git $HOME/.cfg
+    /usr/bin/git --git-dir=$HOME/.cfg/ --work-tree=$HOME checkout
+    /usr/bin/git --git-dir=$HOME/.cfg/ --work-tree=$HOME config --local status.showUntrackedFiles no
+  when: dotfiles_exists.stat.exists == False
 
 
