--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -87,8 +87,11 @@
 - name: change shell
   shell: |
     chsh -s (which zsh)
-
 - name: install libreoffice
   become: true
   dnf:
     name: [ "libreoffice" ]
+- name: install blueman
+  become: true
+  dnf:
+    name: [ "blueman" ]
