--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -91,7 +91,7 @@
     - productivity
 - name: change shell
   shell: |
-    chsh -s (which zsh)
+    chsh -s $(which zsh)
 - name: install libreoffice
   become: true
   dnf:
